--- a/ticketing/public/css/style.css
+++ b/ticketing/public/css/style.css
@@ -65,3 +65,39 @@ th {
   flex-direction: column;
   gap: 1rem;
 }
+
+.context-menu {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  user-select: none;
+}
+
+.context-menu:hover .context-menu-content {
+  display: flex;
+}
+
+.context-menu-content {
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  position: absolute;
+  top:100%;
+  right: 0;
+  z-index: 1;
+  background-color: var(--primary-color);
+  border-radius: 5px;
+  padding: 1rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  
+}
+
+.context-menu-content a {
+  color: var(--primary-text-color);
+  padding: 0.5rem;
+  border-top: 1px solid #CCC;
+}
+
+.context-menu-content a:last-child {
+  border-bottom: 1px solid #CCC;
+}
