--- a/ticketing/src/views/ticket.html.twig
+++ b/ticketing/src/views/ticket.html.twig
@@ -16,6 +16,14 @@
     <button type="submit">Enregistrer</button>
     </form>
 
+    <div>
+    <h2>Chat</h2>
+    
+    
+    
+    
+    </div>
+
 {% endblock %}
 
 {% block script %}
