--- a/ticketing/src/views/home.html.twig
+++ b/ticketing/src/views/home.html.twig
@@ -47,7 +47,7 @@
 			</tr>
 		{% endfor %}
 	</table>
-	<dialog id="newTicketModal">
+	<dialog id="newTicketModal" class="modal" data-trigger="#newTicketBtn" data-close="#closeNewTicketBtn">
 		<form method="POST" action="{{ path("newTicket") }}">
 
 			<label for="subject">Sujet</label>
@@ -56,8 +56,15 @@
 			<label for="description">Description</label>
 			<textarea name="description" id="description" cols="30" rows="10"></textarea>
 
+			<label for="type">Type</label>
+			<select name="type" id="type">
+				{% for type in types %}
+					<option value="{{ type.id }}">{{ type }}</option>
+				{% endfor %}
+			</select>
+
 			<button type="submit">Envoyer</button>
-			<input type="reset"/>
+			<input type="reset" id="closeNewTicketBtn"/>
 		</form>
 	</dialog>
 {% endblock %}
