--- a/ticketing/src/views/users.html.twig
+++ b/ticketing/src/views/users.html.twig
@@ -17,11 +17,19 @@
 			</thead>
 			<tbody>
 				{% for user in users %}
-					<tr>
+					<tr id="user-{{user.id}}" data-id="{{user.id}}" class="user">
 						<td>{{ user.id }}</td>
 						<td>{{ user.login }}</td>
-						<td>{{ user.role }}</td>
-						<td>{{ user.actif }}</td>
+						<td>
+							<select id="role-{{user.id}}" class="role">
+								{% for role in roles %}
+									<option value="{{ role.id }}" {% if role.id == user.role.id %}selected{% endif %}>{{ role }}</option>
+								{% endfor %}
+							</select>
+						</td>
+						<td>
+							<input type="checkbox" id="actif-{{user.id}}" class="actif" {% if user.actif %}checked{% endif %} />
+						</td>
 						<td>{{ user.creationDate|date('d/m/Y H:i:s') }}</td>
 					</tr>
 				{% endfor %}
@@ -56,4 +64,5 @@
 {% block script %}
 	{{ parent() }}
 	<script src="/public/js/index.js"></script>
+	<script src="/public/js/users.js"></script>
 {% endblock %}
