--- a/ticketing/public/css/style.css
+++ b/ticketing/public/css/style.css
@@ -64,6 +64,22 @@ th {
   color: var(--primary-text-color);
 }
 
+td {
+  max-width: 5rem;
+  height: 3rem;
+  max-height: 3rem;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+
 .modal form {
   display: flex;
   flex-direction: column;
@@ -72,9 +88,17 @@ th {
 
 .context-menu {
   position: relative;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
   user-select: none;
+  width: 100%;
+  height: 100%;
+}
+
+td:has(.context-menu) {
+  padding: 0;
 }
 
 .context-menu:hover .context-menu-content {
