--- a/ticketing/src/views/base.html.twig
+++ b/ticketing/src/views/base.html.twig
@@ -16,12 +16,18 @@
 		<nav class="navbar">
 			<h1>Ticketing</h1>
 			<ul>
-			{% if session.isConnected() %}
-				<li><a href="{{ path('home')}}">Home</a></li>
-				{% if session.isAdmin() %}
-					<li><a href="{{ path('users')}}">Users</a></li>
-				{% endif %}
-				<li><a href="{{ path('logout')}}">Logout</a></li>
+				{% if session.isConnected() %}
+					<li>
+						<a href="{{ path('home')}}">Home</a>
+					</li>
+					{% if session.isAdmin() %}
+						<li>
+							<a href="{{ path('users')}}">Users</a>
+						</li>
+					{% endif %}
+					<li>
+						<a href="{{ path('logout')}}">Logout</a>
+					</li>
 				{% endif %}
 			</ul>
 		</nav>
@@ -33,6 +39,8 @@
 		{% block script %}
 			<script type="application/json" id="routes">{{ routes()|json_encode|raw }}</script>
 			<script src="/public/js/dataParser.js"></script>
+			<script src="/public/js/index.js"></script>
+
 		{% endblock %}
 	</body>
 
