--- a/ticketing/public/css/ticket.css
+++ b/ticketing/public/css/ticket.css
@@ -1,13 +1,51 @@
 form {
-  width: 50%;
+  padding: 1.5rem;
+  gap: 1rem 10rem;
+
+  width: 50rem;
+  background-color: hsl(var(--background));
+  color: hsl(var(--foreground));
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-flow: row;
+
+  align-items: center;
 }
 
-form  input,
-form label,
-form select {
+.textarea {
+  grid-row: span 2;
+}
+
+button[type="submit"] {
+  align-self: end;
+  margin: 0;
+}
+
+#chatInput {
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.chats {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   width: 100%;
 }
 
-form > input {
-  margin-bottom: 1rem;
+.chat {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+
+  padding: .5rem .75rem;
+  border-radius: var(--radius);
+
+  background-color: hsl(var(--foreground) / 0.1);
+}
+
+.chat > .date {
+  font-size: 0.75rem;
+  color: hsl(var(--foreground) / 0.5);
 }
