--- a/ticketing/src/views/auth/register.html.twig
+++ b/ticketing/src/views/auth/register.html.twig
@@ -1,24 +1,32 @@
 {% extends "@auth/auth.html.twig" %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Register
+{% endblock %}
 
 {% block auth %}
-  <form action="{{ path('register') }}" method="post">
-    <h2>Register</h2>
-    {% if error %}
-      <p>{{ error }}</p>
-    {% endif %}
-    <label for="login">login</label>
-    <input type="text" id="login" name="login" value="{{ last_login }}" required autofocus>
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password" required>
-    <select name="role" id="role">
-    {% for role in roles %}
-      <option value="{{ role.id }}">{{ role }}</option>
-    {% endfor %}
-    </select>
-    <button type="submit">Register</button>
-  </form>
-    <a href="{{path('login')}}">Login</a>
+	<form action="{{ path('register') }}" method="post">
+		<h2>Register</h2>
+		{% if error %}
+			<p class="error">{{ error }}</p>
+		{% endif %}
+		<div class="input">
+			<label for="login">login</label>
+			<input type="text" id="login" name="login" value="{{ last_login }}" required autofocus>
+		</div>
+		<div class="input">
+			<label for="password">Password</label>
+			<input type="password" id="password" name="password" required>
+		</div>
+		<div class="input">
+			<label for="role">Role</label>
+			<select name="role" id="role">
+				{% for role in roles %}
+					<option value="{{ role.id }}">{{ role }}</option>
+				{% endfor %}
+			</select>
+		</div>
+		<button type="submit" class="outline-button">Register</button>
+		<a href="{{path('login')}}">Already have an account</a>
+	</form>
 
 {% endblock %}
