--- a/ticketing/src/views/base.html.twig
+++ b/ticketing/src/views/base.html.twig
@@ -15,7 +15,7 @@
 	<body>
 		<nav class="navbar">
 			<h1>Ticketing</h1>
-			<ul>
+			<ul class="nav-links transition-colors">
 				{% if session.isConnected() %}
 					<li>
 						<a href="{{ path('home')}}">Home</a>
@@ -34,6 +34,23 @@
 		<main>
 			{% block content %}{% endblock %}
 		</main>
+
+		<template id="select-template">
+			<div class="select">
+				<div class="select-container">
+					<div class="select-choosen"></div>
+					<svg class="select-arrow" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-down"><path d="m6 9 6 6 6-6"/></svg>
+				</div>
+			</div>
+		</template>
+
+		<template id="select-choice-template">
+			<div class="select-choice"></div>
+		</template>
+
+		<template id="select-item-template">
+			<div class="select-item"></div>
+		</template>
 
 
 		{% block script %}
